--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -9,3 +9,19 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 45px;
 }
+.proceed-link{
+    text-decoration: none;
+}
+.btn-proceed{
+    width: 90%;
+    height: 56px;
+    font-size: 21px;
+    margin: 10px auto;
+    border-radius: 4px;
+    background: #FF9900;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-decoration: none;
+}
