--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,3 +19,17 @@ nav.header a {
 nav.header a:hover {
     color: orange;
 }
+
+.text-white{
+    color: #fff;
+    padding-left: 5px;
+}
+
+.text-white:hover{
+    color: orange;
+}
+
+.text-white button{
+    background-color: whitesmoke;
+    color: #1C2B35;
+}
